Add small fix to UI

--- a/front end/src/assets/style/main.css
+++ b/front end/src/assets/style/main.css
@@ -20,7 +20,10 @@
 
 .layout-grid {
     display: grid;
-    grid-template-columns: 10vw;
+    grid-template-columns: 352;
+}
 
+.sidebar {
+    
 }
 
