--- a/front end/src/assets/style/main.css
+++ b/front end/src/assets/style/main.css
@@ -1,29 +1,6 @@
-.card {
-    background-color: white;
-    padding: 1rem;
-    border-radius: 8px;
-    position: relative;
-}
+@import "antd/dist/antd.css";
 
-.btn-container {
-    display: flex;
-    align-items: center;
-}
-
-.login-wrapper {
-    background-color: blue;
-    position: relative;
-    align-items: center;
-    margin: 10vh;
-    padding: 4vh;
-}
-
-.layout-grid {
-    display: grid;
-    grid-template-columns: 352;
-}
-
-.sidebar {
-    
+body {
+    background-color: rgba(228, 49, 49, 0.933);
 }
 
