--- a/front end/src/assets/style/main.css
+++ b/front end/src/assets/style/main.css
@@ -9,23 +9,13 @@
     color: black;
 }
 
-.logo {
-    background-color: #004C9B;
-}
+
 
 .gap {
     height: 40px;
 }
 
-.container {
-    position: absolute;
-    top: 10%;
-    left: 10%;
-    overflow: hidden;
-    align-items: center;
-    margin: 0 auto;
-    justify-content: center;
-}
+
 
 Col {
     margin: 20px;
@@ -34,5 +24,10 @@ Col {
 
 #formarea {
     background-color: rgb(227, 227, 227);
+}
+
+.content {
+    margin: 10pt;
+    padding: 20pt;
 }
 
