--- a/front end/src/pages/LoginPage/Login.module.css
+++ b/front end/src/pages/LoginPage/Login.module.css
@@ -2,7 +2,7 @@
     background-color: red;
     padding: 1rem;
     margin: 1px;
-    height: 100%;
+    /* height: 100%; */
     border-radius: 8px;
     position: static;
 }
@@ -13,29 +13,23 @@
 }
 
 .loginContainer {
-    position: static;
-    align-items: center;
-    margin: 0 auto;
+    display: flex;
     justify-content: center;
-    width: 50%;
-    height: 50%;
-    margin: 20vw;
-    padding: 4vh;
-    border-color: antiquewhite;
-    display: grid;
-    grid-template-columns:  1fr 1fr;
+    align-items: center;
+    height: 100vh;
 }
 
 .form_group {
     margin: 5% 20% 5% 20%;
 }
 
-img {
-    width: 300px; 
-    height: 337px; 
+.logo {
+    width: 200px; 
     object-fit: cover; 
     object-position: 100% 0;
+    background-color: #004C9B;
 }
+
 
 .btn-primary {
     color: #fff;
