--- a/front end/src/component/Layout/style.module.css
+++ b/front end/src/component/Layout/style.module.css
@@ -4,7 +4,7 @@
     left: 0;
     width: 1px;
     height: 100vh;
-    background-color: #004C9B;
+    background-color: #004C9B !important;
     z-index: 100;
     overflow-y: auto;
     transition: all 0.3s ease;
@@ -13,10 +13,10 @@
 
 .menuSideBarClass {
     position: fixed;
-    background-color: #004C9B;
+    background-color: #004C9B !important;
     height: 100%;
     padding: 1rem;
-    width: 1px;
+    width: 100%;
     position: relative;
     overflow: hidden;
 }
@@ -44,3 +44,4 @@
     justify-content: flex-end;
     padding-right: 1rem;
 }
+
