--- a/front end/src/pages/Register/style.module.css
+++ b/front end/src/pages/Register/style.module.css
@@ -6,17 +6,6 @@
     box-sizing: border-box;
 }
 
-html {
-    font-family: 'Nunito', sans-serif;
-    font-size: 22px;
-    color: #fff;
-}
-
-body {
-    min-height: 100vh;
-    background-color: dodgerblue;
-}
-
 .App {
   display: flex;
   flex-direction: column;
@@ -34,7 +23,7 @@ section {
     flex-direction: column;
     justify-content: flex-start;
     padding: 1rem;
-    background-color: rgba(0,0,0,0.4);
+    background-color: rgb(227, 227, 227);
 }
 
 form {
