--- a/front end/src/pages/Register/style.module.css
+++ b/front end/src/pages/Register/style.module.css
@@ -27,10 +27,7 @@ a, a:visited {
     color: rgb(0, 0, 0);
 }
 
-input[type="text"],
-input[type="password"],
-button,
-textarea {
+.customInput {
   font-family: 'Nunito', sans-serif;
   font-size: 22px;
   padding: 0.25rem;
